Fix loading styles, fix scrollbar on short pages

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,17 +3,20 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+
   // Align the main content to the center of the page
   margin-left: auto;
   margin-right: auto;
-  
+
   // Limit the width of the main content
   max-width: var(--container-l);
-  
-  // Make sure the main content is at least the height of the viewport
-  min-height: 100vh;
 
   // Pad the top for the fixed nav
-    padding-top: 64px;
+  padding-top: 64px;
+
+  // Make sure the main content is at least the height of the viewport minus the top offset for fixed nav
+  // NOTE: I have no clue where the additional 6 pixels are coming from, but
+  // the 70px offset will remove scrollbar on pages which don't need to be more
+  // than 100vh tall
+  min-height: calc(100vh - 70px);
 }
